@@ -20,10 +20,10 @@ target_large_model_list = ["cvms5.tar.gz",
                     "cca.tar.gz",
                     "cs173.tar.gz",
                     "cs173h.tar.gz",
-                    "cvms4.tar.gz",
-                    "cvms426.tar.gz",
-                    "cvmh-15.1.1.tar.gz",
-                    "cencal080.tar.gz",
+                    "cvms.tar.gz",
+                    "cvmsi.tar.gz",
+                    "cvmh.tar.gz",
+                    "cencal.tar.gz",
                     "albacore.tar.gz",
                     "cvlsu.tar.gz",
                     "ivlsu.tar.gz",
